add no row criteria

--- a/force-app/main/default/classes/OpportunityController.cls
+++ b/force-app/main/default/classes/OpportunityController.cls
@@ -1,7 +1,14 @@
 public with sharing class OpportunityController {
     @AuraEnabled(cacheable=true)
     public static List<Opportunity> getOpportunityList(String searchKey) {
-        String key = '%' + searchKey + '%';
+        String criteria = '';
+
+        if (searchKey.trim() == '') {
+            criteria = 'AND 1=2';
+        }
+
+        String key = '%' + searchKey + '%' + criteria;
+       
         return [
             // TODO1: find a way to include Account.Name, Owner.Name
             SELECT Id, Name, StageName, CloseDate, Amount
