remove unnecessary code

--- a/force-app/main/default/classes/OpportunityController.cls
+++ b/force-app/main/default/classes/OpportunityController.cls
@@ -1,19 +1,11 @@
 public with sharing class OpportunityController {
     @AuraEnabled(cacheable=true)
-    public static List<Opportunity> getOpportunityList(String searchKey) {
-        String noRowsFlag = '';
-
-        if (searchKey == '') {
-            noRowsFlag = ' AND 1=2';
-        }
-
-        String key = '%' + searchKey + '%' + noRowsFlag;
-       
+    public static List<Opportunity> getOpportunityList(String searchKey) {     
         return [
             // TODO1: find a way to include Account.Name, Owner.Name
             SELECT Id, Name, StageName, CloseDate, Amount
             FROM Opportunity
-            WHERE StageName LIKE :key
+            WHERE StageName = :searchKey
             WITH SECURITY_ENFORCED
         ];
     }
